@@ -1,5 +1,5 @@
-AUX japa-0.1.8-makefile.patch 946 RMD160 fe92c5a8b8f27cc23ccdef2986351e88fb77ef4b SHA1 7888096008867e5d253f8bb5d25f469a40ec0b3d SHA256 0e277caba5c02757b267441223609c13244f1e689616dcfc4ff7df4918e08f2d
-DIST japa-0.6.0.tar.bz2 26860 RMD160 1e581e49e7b1e056c1b6061e1e9f6d5c34ef85e2 SHA1 2d0d9d8d07086fd97a04792fd3752e238cbb30d8 SHA256 d1e8dc85099af2ff7692ea7287792fca7e3ab931026031ef5d7e1e1d9cd1de21
-EBUILD japa-0.6.0.ebuild 1013 RMD160 a2f1b6b2d96ce8f4387f0d094c3b1c54151b2865 SHA1 460ea779dd1c9624c798b85f2c2136b0ab304930 SHA256 8a3c3b10e48cb481249f671df4060bb2bf23c74a50ea6de79266d956cf21100e
-MISC ChangeLog 913 RMD160 2fb38b86371c349517f7a4a6740cd9c5b6e55ae9 SHA1 a9517ed0aa5c281805e8fcccd2b1662d054c7ea0 SHA256 d93d45cdc4b2d51eca687c584c00c5c2a02bebadbf3dc363a6346cab2983d606
-MISC metadata.xml 246 RMD160 cdd725771833663c8cfa684c4c71e57d86d9993d SHA1 973be5799e631fd26fb4abcfc8da942f2f759d06 SHA256 f32f31abe9dcc1f9a5dc9b6a36996d773abd006d92c13c4df48f8d7d1061060f
+AUX japa-0.1.8-makefile.patch 946 SHA256 0e277caba5c02757b267441223609c13244f1e689616dcfc4ff7df4918e08f2d SHA512 68897a3a8f5853470c5640997e74cb2d651388c5921a7595f4e700ba6187102f79d447b8e0ee8fcaab55ba0129c7fb098d6b337dd7432af2e31e83da5263edd0 WHIRLPOOL 130cab429ddf6bfe1a66e0f39d709676578f4b2c1b11997a0946207e394ec45f7a506a583871bedbf614664cf5dc93224dd788e324be8ace0add8ae0070d47c4
+DIST japa-0.8.4.tar.bz2 26288 SHA256 e0320eb32d6a64a3b774100a904282bac84df50494aa061925ac4cbc893e12ca SHA512 d81652153e88394c81cc257af59b554718d3476c48062cfa7e246627171dc92842f6524a06ab8151220d4dae9d94a386f2d90efb1d238bbbc522988dfeaad32a WHIRLPOOL 995caf525050cf3e05794b0006e9a94079a2628ddcaa770a58c129283df9d5227ed9bea33abaf374aedeafd24aa0139b55689e087bce2a86793d38dbccaa469f
+EBUILD japa-0.8.4.ebuild 953 SHA256 3c395573bb43fd6e28ce9773d3690b8b2e613c57da79aa99447ea791b6833461 SHA512 bf16ac997d4fd33acc27b476aa4eb2ef396c3d30209324febe47f090066fe329a1364930cfa68602782f2012434f00444328c58dc7b4cddcd65e9098076d6993 WHIRLPOOL 21ab208cf7bb3b3b825732d086243eb61ea637f58aada88e68c796f92333779d96c2b374018ff577daa0d83a18f66e5fe4a48db43463a700d427a5370ab585e3
+MISC ChangeLog 1167 SHA256 257861ce27e2520012c9ed43c037ea78cfe486048cc28f81000649f19f5dbf1d SHA512 059f6f5eadcb2b6fb71d5b1b92c49f3f756fdb85a8b6f18da9ad62a89f158f94460bc719f272fb634a549c273ed540f48a05c94f603aca7943c321d58d89fa17 WHIRLPOOL 5ab60401c3805aa680ce7a40709669a4bf13901c9c1e22db83cc241e2a9141b680bfecb82affce77ae2ce6e6e9e04c83be1cbb736c89522fb7c1b5ceddab75f1
+MISC metadata.xml 246 SHA256 f32f31abe9dcc1f9a5dc9b6a36996d773abd006d92c13c4df48f8d7d1061060f SHA512 327022589c637a14219eb603a62050fbb93b980f4693960c0ac4117b6b483d9f0d9fe1366d8e18227b34373a399aef339f49c16df8ca57b9ec870568a4d394f4 WHIRLPOOL e55381a9a9fd1d0efbe87da1c3aa302efdcf4734827f56273faeb55b17361c529518fcf16ac0946102e26165e8eedba81ab0cd07c7b08ce6bad001e944e43a0f
