@@ -1,6 +1,16 @@
 # ChangeLog for media-sound/japa
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*japa-0.8.4 (09 Apr 2015)
+
+  09 Apr 2015; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
+  -japa-0.6.0.ebuild, +japa-0.8.4.ebuild:
+  version bump, wrt #192
+  eapi 5
+  update dependencies
+  drop exteutils eclass and use sed directly
+  respect EPREFIX
 
   04 Jan 2012; Gavin Pryke <gavinlee303@googlemail.com> -japa-0.1.8.ebuild,
   japa-0.6.0.ebuild, metadata.xml:
